correção dos links

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <div class="links">
                     <ul >
                         <li>
-                            <a class="link_btn" href="https://github.com/ErykTavares" target="_blank"><img src="./img/linkedin.png" alt="Linkedin"><h5>Linkedin</h5></a>
+                            <a class="link_btn" href="https://www.linkedin.com/in/eryktavares35/" target="_blank"><img src="./img/linkedin.png" alt="Linkedin"><h5>Linkedin</h5></a>
                         </li>
                         <li>
-                            <a class="link_btn" href="https://www.linkedin.com/in/eryk-t-7879a7ba/" target="_blank"><img src="./img/git-hub.png" alt="GitHub"><h5>GitHub</h5></a>
+                            <a class="link_btn" href="https://github.com/ErykTavares" target="_blank"><img src="./img/git-hub.png" alt="GitHub"><h5>GitHub</h5></a>
                         </li>
                         <li>
                             <a class="link_btn" href="https://www.instagram.com/lord_eryktavares/?hl=pt-br" target="_blank"><img src="./img/instagram.png" alt="Instagram"><h5>Instagram</h5></a>
