--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BioLinks-ErykTavares</title>
-    <link rel="icon" href="./img/instagram_1.png">
+    <title>ErykTavares-Links</title>
+    <link rel="icon" href="./img/link.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
@@ -18,17 +18,27 @@
                 <div class="profile">
                     <img src="./img/profile-img.jpg" alt="profile-img">
                     <h1>ErykTavares</h1>
+                    <h4>Programador Desenvolvedor Web </h4>
                 </div>
                 <div class="links">
                     <ul >
                         <li>
-                            <a class="link_btn" href="https://www.linkedin.com/in/eryktavares35/" target="_blank"><img src="./img/linkedin.png" alt="Linkedin"><h5>Linkedin</h5></a>
-                        </li>
-                        <li>
                             <a class="link_btn" href="https://github.com/ErykTavares" target="_blank"><img src="./img/git-hub.png" alt="GitHub"><h5>GitHub</h5></a>
                         </li>
                         <li>
+                            <a class="link_btn" href="https://www.linkedin.com/in/eryktavares35/" target="_blank"><img src="./img/linkedin.png" alt="Linkedin"><h5>Linkedin</h5></a>
+                        </li>
+                        <li>
                             <a class="link_btn" href="https://www.instagram.com/lord_eryktavares/?hl=pt-br" target="_blank"><img src="./img/instagram.png" alt="Instagram"><h5>Instagram</h5></a>
+                        </li>
+                        <li>
+                            <a class="link_btn" href="http://api.whatsapp.com/send?phone=557591952463" target="_blank"><img src="./img/whatsapp.png" alt="Whatsapp"><h5>Whatsapp</h5></a>
+                        </li>
+                        <li>
+                            <a class="link_btn" href="https://discord.com/users/859431514449379358" target="_blank"><img src="./img/discordia.png" alt="Discord"><h5>Discord</h5></a>
+                        </li>
+                        <li>
+                            <a class="link_btn" href="https://www.youtube.com/channel/UCvLrUAMzmxB-H0iK8H7ReQg" target="_blank"><img src="./img/youtube.png" alt="Youtube"><h5>Youtube</h5></a>
                         </li>
                     </ul>
                 </div>   
