--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
         <div class="row">
             <div class="col-md-12 content" >
                 <div class="profile">
-                    <img src="./img/profile-img.jpg" alt="profile-img">
+                    <img src="./img/profile-img.png" alt="profile-img">
                     <h1>ErykTavares</h1>
-                    <h4>Programador Desenvolvedor Web </h4>
+                    <h4>Desenvolvedor Web Front-End </h4>
                 </div>
                 <div class="links">
                     <ul >
+                        <li>
+                            <a class="link_btn" href="https://eryktavares-portifolio.netlify.app/" target="_blank"><img src="./img/website.svg" alt="portifolio"><h5>Portifolio</h5></a>
+                        </li>
+                   
                         <li>
                             <a class="link_btn" href="https://github.com/ErykTavares" target="_blank"><img src="./img/git-hub.png" alt="GitHub"><h5>GitHub</h5></a>
                         </li>
@@ -48,7 +52,6 @@
             <H6>copyright ErykTavares © 2021</H6>
         </footer>  
     </div>
-    
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
