--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="links">
                     <ul >
                         <li>
-                            <a class="link_btn" href="https://eryktavares-portifolio.netlify.app/" target="_blank"><img src="./img/website.svg" alt="portifolio"><h5>Portifolio</h5></a>
+                            <a class="link_btn" href="https://eryktavares-portfolio.netlify.app/" target="_blank"><img src="./img/website.svg" alt="portifolio"><h5>Portifolio</h5></a>
                         </li>
                    
                         <li>
