feat: instagram link update

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <a class="link_btn" href="https://www.linkedin.com/in/eryktavares35/" target="_blank"><img src="./img/linkedin.png" alt="Linkedin"><h5>Linkedin</h5></a>
                         </li>
                         <li>
-                            <a class="link_btn" href="https://www.instagram.com/lord_eryktavares/?hl=pt-br" target="_blank"><img src="./img/instagram.png" alt="Instagram"><h5>Instagram</h5></a>
+                            <a class="link_btn" href="https://www.instagram.com/dev_eryktavares/?hl=pt-br" target="_blank"><img src="./img/instagram.png" alt="Instagram"><h5>Instagram</h5></a>
                         </li>
                         <li>
                             <a class="link_btn" href="http://api.whatsapp.com/send?phone=557591952463" target="_blank"><img src="./img/whatsapp.png" alt="Whatsapp"><h5>Whatsapp</h5></a>
